--- a/Configurable-Armour-Suits/changelog.txt
+++ b/Configurable-Armour-Suits/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.5.12
+Date: 30.08.25
+  Bugfixes:
+    - PA&R's New texture Structure change.
+    - (Optional) Require PAR 0.3.23 (Beta version Only on Discord) until PA&R 0.4.0
+---------------------------------------------------------------------------------------------------
 Version: 1.5.11
 Date: 15.08.2025
   Changes:
