--- a/Configurable-Armour-Suits/changelog.txt
+++ b/Configurable-Armour-Suits/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.5.14
+Date: ????
+  Changes:
+---------------------------------------------------------------------------------------------------
 Version: 1.5.13
 Date: 16.10.25
   Bugfixes:
