--- a/Configurable-Armour-Suits/changelog.txt
+++ b/Configurable-Armour-Suits/changelog.txt
@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.5.16
+Date: 26.12.25
+  Bugfixes:
+    - Crash with PAR Scenario's with Tanks.
+  Info:
+    - Version dependency With PA&R.
+---------------------------------------------------------------------------------------------------
 Version: 1.5.15
 Date: 5.11.25
   Bugfixes:
