--- a/Configurable-Armour-Suits/changelog.txt
+++ b/Configurable-Armour-Suits/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.5.17
+Date: 5.2.26
+  Features:
+    - Added support for TinyStart2.
+---------------------------------------------------------------------------------------------------
 Version: 1.5.16
 Date: 26.12.25
   Bugfixes:
