--- a/Configurable-Armour-Suits/changelog.txt
+++ b/Configurable-Armour-Suits/changelog.txt
@@ -3,10 +3,13 @@ Version: 1.5.17
 Date: 5.2.26
   Features:
     - Added support for TinyStart2.
+  Changes:
+    - Re order the mech armour settings for metal&stars, Mech armour & space age & lastly RampantArsenalFork 1.0.3.
   Bugfixes:
     - Full Locals Fix for EN. had added the warning to the wrong setting across the the mods.
   Info:
     - TinyStart2 compatibility patch. Only available on discord.
+    - TinyStart2 disabled on portal version.
   Thanks:
     - @dragonfireex for giving suggestion. TinyStart2 compatibility patch. 
 ---------------------------------------------------------------------------------------------------
