Vanilla Frefix changes

--- a/Configurable-Armour-Suits/changelog.txt
+++ b/Configurable-Armour-Suits/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.5.18
+Date: 11.2.26
+  Changes:
+    - Support for TinyStart2 are fully added to CAS.
+    - Vanilla "SS" prefix.
+---------------------------------------------------------------------------------------------------
 Version: 1.5.17
 Date: 5.2.26
   Features:
